hellotest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $Product$-hellotest
spec:
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: http
